# resumeGenerator

./: .gitignore  README.md  pyproject.toml  resume.py
lib/: generator.py  pdf_parser.py
